--- a/ProjetoProvy/package.json
+++ b/ProjetoProvy/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "npm-run-all2": "^6.2.0",
+    "picomatch": "^4.0.2",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
