--- a/ProjetoProvy/package.json
+++ b/ProjetoProvy/package.json
@@ -9,7 +9,8 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
