--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_APP_BACKEND_URL=http://13.61.25.37:3000
+VITE_APP_BACKEND_URL=http://localhost:3000
 VITE_APP_MONGO_URL=mongodb+srv://kaua:25042003@cluster0.mkv18.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
